# grpo-trainer

./: Makefile  README.md  flake.nix  pyproject.toml
eval/: PLAN.md  compare.py  eval.py  metrics.py  viewer.html
scripts/: bootstrap.sh  hf_to_gguf.sh  start_llama_server.sh  start_vllm_server.sh
