[project]
name = "ocamler-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "regex>=2024.0.0",
    "datasets>=4.4.1",
    "openai>=1.51.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pytest>=8.0.0",
    "requests>=2.32.3",
    "ruff>=0.14.5",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "trl>=0.25.1",
    "verifiers>=0.1.8",
    "gguf>=0.18.0",
    "sentencepiece>=0.2.1",
]

[project.optional-dependencies]
cuda = [
    "bitsandbytes>=0.45.0",
    "vllm>=0.1.2; sys_platform == 'linux'"
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch", marker = "sys_platform == 'linux'" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100

[tool.pycodestyle]
max-line-length = 100
